@@ -1,3 +1,7 @@
+2018-02-12  Daniel Hawkins
+    * server/monster.c: Refactor to reduce calls to ob_blocked by remembering prior blocked tiles from the same run.
+      This causes a small but noticable (~5%) reduction in overall pathing cost.
+
 2018-02-11  Daniel Hawkins
     * common/map.c: Refactor get_map_from_coord() to be iterative instead of recursive.
 
